javaDSL/src/test/resources/typeSystemTestModels/valid/expressions/PrimarySuper.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.expressions;

public class PrimarySuper extends SuperClass{
  int a = super.d;
}
